--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,21 @@
 
 
 body{
-    background-color: #a9c6de;
+    background-color: #eaf5ff;
 }
 
+div{
+    background-color: chocolate;
+}
+
+div.CONTENEDOR-INTERMEDIO {
+    background-color: red;
+    width: 200px;
+    height: 200px;
+}
+
+div.CONTENEDOR-INFERIOR {
+    background-color: blue;
+    width: 200px;
+    height: 200px;
+}
