--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,13 @@ body{
     text-align: center;
 }
 
+ 
+
 div.CONTENEDOR-SUPERIOR{
     background-color: #eaf5ff;;
+    position: relative;
+    padding-top: 130px;
+    
 }
 
 div.CONTENEDOR-INTERMEDIO {
@@ -24,4 +29,21 @@ div.CONTENEDOR-INFERIOR {
     background-color: blue;
     width: 200px;
     height: 200px;
+}
+
+.NUBE-INFERIOR{
+    bottom: 890px ;
+    position: absolute;
+    left:300px;
+
+    
+
+}
+
+.NUBE-SUPERIOR{
+    
+    position: absolute;
+    top:10px;
+    right:300px;
+
 }
