--- a/css/styles.css
+++ b/css/styles.css
@@ -15,20 +15,44 @@ body{
 h1{
 
     font-family: 'Caveat', cursive;
+    font-size: 5.625rem;
+    margin: 50px  auto 0 auto;
+    color: #6AABFD;
+    line-height:2;
 
 }
 
-h2,h3{
+h2{
     font-family: 'Oswald', sans-serif;
+    font-size: 1.875rem;
+    margin: 60px;
+    color: #6AABFD;
+    font-weight: normal;
+    
+}
+
+h3{
+
+    font-family: 'Oswald', sans-serif;
+    color: #5F99E3;
 }
  
+a{
+    color: #5F99E3;
+}
 
 div.CONTENEDOR-SUPERIOR{
     background-color: #eaf5ff;;
     position: relative;
     padding-top: 160px;
+    background-color: #C6E0FF;
     
 }
+
+
+
+
+
 
 #ajustetamaño{
     height: 600px;
@@ -48,6 +72,12 @@ div.CONTENEDOR-INFERIOR {
 
 
     
+}
+
+.skill-row{
+    width: 50%;
+    text-align: center;
+    margin: 0 auto;
 }
 
 
