--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,9 @@ body{
     background-color: #eaf5ff;
     font-family: 'Ubuntu', sans-serif;
     text-align: center;
+
+ /*    hola */
+
 }
 
 h1{
