--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 * {
     margin: 0;
     padding: 0;
-}
+  }
 
 
 
@@ -15,20 +15,25 @@ body{
     #e6fcff, #e0f7fe, #dbf2fc, #d6edfb, 
     #d3e8f9, #cfe4f8, #cbe1f8, #c8ddf7, 
     #c2daf7, #bcd7f8, #b6d5f8, #b0d2f8);
-
- /*    hola */
-
 }
 
+#ajustetamaño{
+    height: 600px;
+}
 
+#ImagenPerfil{
+    height: 350px;
+    margin: 50px auto 10px auto;
+    padding: 
 
+}
 
 
 h1{
 
     font-family: 'Caveat', cursive;
-    font-size: 5.625rem;
-    margin: 50px  auto 0 auto;
+    font-size: 3.75rem;
+    margin: 50px  auto 50px auto;
     color: #6AABFD;
     line-height:2;
 
@@ -65,6 +70,10 @@ hr{
    
 }
 
+
+
+
+
 div.CONTENEDOR-SUPERIOR{
     /* background-color: #eaf5ff;; */
     position: relative;
@@ -80,9 +89,7 @@ div.CONTENEDOR-SUPERIOR{
 }
 
 
-#ajustetamaño{
-    height: 600px;
-}
+
 
 div.CONTENEDOR-INTERMEDIO {
     text-align:justify;
@@ -90,23 +97,13 @@ div.CONTENEDOR-INTERMEDIO {
    
 }
 
-#ImagenPerfil{
-    height: 350px;
-    margin: 50px auto 10px auto;
-    padding: 
 
-}
 
 .ImagenesHabilidades1{
   
   width: 30%;
   float: left;
   margin-right: 30px;
-  
-  
-  
-  
-  
 }
 
 .ImagenesHabilidades2{
@@ -117,16 +114,13 @@ div.CONTENEDOR-INTERMEDIO {
    
   }
 
-  .PosDerecha{
-     /*  text-align: right; */
-    
-
-  }
 
 .CONTACTO{
     width: 50%; 
     margin: auto;
 }
+
+
 div.CONTENEDOR-INFERIOR {
 
 width: 50%;
@@ -147,12 +141,10 @@ margin: auto;
     margin: 100px auto  100px auto;
     text-align:justify;
     line-height: 1.5;
-    
-
-}
+ }
 
 
-.butn {
+.butn{
     -webkit-border-radius: 60;
     -moz-border-radius: 60;
     border-radius: 60px;
@@ -162,7 +154,8 @@ margin: auto;
     background: #79B3FF;
     padding: 10px 20px 10px 20px;
     text-decoration: none;
-  }
+    backdrop-filter: none;
+ }
   
   .butn:hover {
     background: #FFC627;
@@ -170,7 +163,7 @@ margin: auto;
   }
 
 
-.NUBE-INFERIOR{
+/* .NUBE-INFERIOR{
     bottom: 890px ;
     position: absolute;
     left:300px;
@@ -185,5 +178,5 @@ margin: auto;
     top:10px;
     right:300px;
 
-}
+} */
 
